--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -44,7 +44,7 @@ logger.file.appenderRef.file.ref = LOGFILE
 logger.file.additivity = false 
 
 logger.hibernate.name = org.hibernate
-logger.hibernate.level = info
+logger.hibernate.level = error
 logger.hibernate.appenderRefs = file
 logger.hibernate.appenderRef.file.ref = HIBFILE
 logger.hibernate.additivity = false 
