--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/TEST_TheraBilling
+url=jdbc:mysql://localhost:3306/test_theraBilling
 username=root
 password=Debim001
 
