--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>TagProject</groupId>
+      <artifactId>Tags</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
 
   </dependencies>
 
