--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,6 +1,4 @@
-#property.filename = logs
-
-property.filename = /Users/Elise/IdeaProjects/TheraBilling/logs
+property.filepath = /Users/Elise/IdeaProjects/TheraBilling/logs
 
 appenders = console, file, hibernate
 
@@ -11,7 +9,7 @@ appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=${filename}/therabilling.log
+appender.file.fileName=${filepath}/TheraBilling.log
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
@@ -19,8 +17,8 @@ appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} -
 ## It will delete log files if there are more than 5
 appender.hibernate.type = RollingFile
 appender.hibernate.name = HIBFILE
-appender.hibernate.fileName = ${filename}/hibernate.log
-appender.hibernate.filePattern=${filename}/hibernate_%d{yyyyMMdd HH:mm}.log
+appender.hibernate.fileName = ${filepath}/hibernate.log
+appender.hibernate.filePattern=${filepath}/hibernate_%d{yyyyMMdd HH:mm}.log
 appender.hibernate.layout.type=PatternLayout
 appender.hibernate.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.hibernate.policies.type = Policies
@@ -37,17 +35,18 @@ appender.hibernate.strategy.delete.ifAccumulatedFileCount.exceeds = 5
 loggers=file, hibernate
 
 logger.file.name = edu.matc
-logger.file.level = info
+logger.file.level = debug
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
 #logger.file.additivity will prevent logging in the parent (root, which is console in this case)
 logger.file.additivity = false 
 
 logger.hibernate.name = org.hibernate
-logger.hibernate.level = error
+logger.hibernate.level = trace
 logger.hibernate.appenderRefs = file
 logger.hibernate.appenderRef.file.ref = HIBFILE
 logger.hibernate.additivity = false 
+
 
 rootLogger.level = error
 rootLogger.appenderRefs = stdout
