Genericify PatientDao to GenericDao, PatientDao deleted

--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -2,5 +2,7 @@ driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/test_theraBilling
 username=root
 password=Debim001
+#username=EliseJava
+#password=Dream@45
 
 
