Implemented authenication for search page - Week 7 excersice

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,8 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/therabilling
-#username=root
-#password=Debim001
-username=EliseJava
-password=Dream@45
+username=root
+password=Debim001
+#username=EliseJava
+#password=Dream@45
 
 
