--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,32 @@
         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
         version="3.1">
   <display-name>TheraBilling Web Application</display-name>
+  <!-- Tell the server to use form-based authentication. -->
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <form-login-config>
+      <form-login-page>/jsp/login.jsp</form-login-page>
+      <form-error-page>/jsp/loginerror.jsp</form-error-page>
+    </form-login-config>
+  </login-config>
+
+  <!-- Protect the receptionist of theraBilling from accessing the Billing system. -->
+  <!-- for testing purposes the receptionist will not be able to see the patient search results -->
+  <security-constraint>
+
+    <web-resource-collection>
+      <web-resource-name>billing</web-resource-name>
+      <url-pattern>/jsp/search.jsp</url-pattern>
+    </web-resource-collection>
+
+    <auth-constraint>
+      <role-name>owner</role-name>
+    </auth-constraint>
+
+  </security-constraint>
+
+  <security-role>
+    <role-name>owner</role-name>
+  </security-role>
+
 </web-app>
